# MemorySprout

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: garden.h  inventory.h  plot.h  weather.h
src/: garden.c  inventory.c  plot.c  weather.c
